--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					   					<div class="desc">
 						   					<h1>Hi! <br>I'm Ganapathi!</h1>
 						   					<h2>Welcome to my Portfolio</h2>
-												<p><a href="res/CV-ganapathi-revise-1.pdf" class="btn btn-primary btn-learn">Download my CV <i class="icon-download4"></i></a></p>
+												<p><a href="https://drive.google.com/file/d/16UoEdVP3LWa4-8h6WwEYnQ0jCeIF37or/view?usp=sharing" class="btn btn-primary btn-learn">Download my CV <i class="icon-download4"></i></a></p>
 											</div>
 					   				</div>
 					   			</div>
@@ -130,7 +130,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 												</a>
 											
 											</p><br>
-											<p><a href="res/CV-ganapathi-revise-1.pdf" class="btn btn-primary btn-learn">Download my Resume <i class="icon-briefcase3"></i></a></p>
+											<p><a href="https://drive.google.com/file/d/16UoEdVP3LWa4-8h6WwEYnQ0jCeIF37or/view?usp=sharing" class="btn btn-primary btn-learn">Download my Resume <i class="icon-briefcase3"></i></a></p>
 										</div>
 					   				</div>
 					   			</div>
